fix for a little jump while clicking the button on mobile view

--- a/style.css
+++ b/style.css
@@ -55,10 +55,10 @@ p {
 
 /* PROFILE 1 */
 .profile {
-  margin-top: 30px;
+  padding-top: 30px;
   display: flex;
   width: 100%;
-  height: 45px;
+  height: 70px;
   align-items: center;
   justify-content: space-between;
 }
